Fix scroll bar wrap on admin crop modal

--- a/app/stylesheets/admin/design/_modals.scss
+++ b/app/stylesheets/admin/design/_modals.scss
@@ -83,5 +83,5 @@
 
 .fr-modal.admin-crop-modal {
   height: 640px;
-  width: 950px !important;
+  width: 967px !important;
 }
